fix(139654): :bug: remove text-align duplicado

--- a/sme_sigpae_api/relatorios/static/css/relatorio_dietas_especiais_terceirizada.scss
+++ b/sme_sigpae_api/relatorios/static/css/relatorio_dietas_especiais_terceirizada.scss
@@ -10,7 +10,6 @@
     font-weight: 600;
     font-size: 20px;
     line-height: 23px;
-    text-align: center;
     color: #000000;
   }
 
